# python-ai-agents

./: .gitignore  DESIGN.md  README.md  environment-analytics-demo.yml  environment.yml  pyproject.toml  requirements-analytics-demo.txt
.github/workflows/: ci.yml
demos/analytics/: README.md  requirements.txt
demos/analytics/src/analytics/: __init__.py  advanced_tools.py  agent.py  app.py  audit_store.py  backtest.py  catalog.py  charts.py  conformal.py  csv_source.py  data_source.py  dataset_fingerprint.py  decision_store.py  file_lock.py  freshness.py  graph_source.py  ingest.py  insights.py  lineage.py  metrics.py  ml_tools.py  model_store.py  models.py  models_tools.py  parquet_source.py  portfolio.py  profiler.py  provenance.py  query_planner.py  reconcile.py  relationships.py  safe_sql.py  schema_builder.py  secrets.py  segmentation.py  semantic_model.py  semantic_roles.py  sql_source.py  synthetic_data.py  toolset.py  (+4 more)
demos/analytics/src/analytics/dsl/: __init__.py  ast.py  catalog.py  engine.py  grounding.py  nl.py  parser.py
docs/: JAVA_PARITY.md  MODEL_LIFECYCLE.md  MODEL_SCORECARD.md  STATUS.md  analytics_engine_tracker.md  dsl_engine.md  incremental_ingestion_plan.md  production_readiness.md
model_scorecards/: ollama_model_scorecard_20260706T231448Z.json  ollama_model_scorecard_20260706T231448Z.md  ollama_model_scorecard_20260706T232238Z.json  ollama_model_scorecard_20260706T232238Z.md  ollama_model_scorecard_20260707T045650Z.json  ollama_model_scorecard_20260707T045650Z.md  ollama_model_scorecard_20260707T053638Z.json  ollama_model_scorecard_20260707T053638Z.md  ollama_model_scorecard_20260707T055223Z.json  ollama_model_scorecard_20260707T055223Z.md
src/python_ai_agents/: __init__.py
src/python_ai_agents/adapters/: __init__.py  a2a.py  deepeval.py  guardrails_ai.py  jsonschema_tools.py  langgraph.py  mcp.py  ollama.py  otel.py  presidio_guardrails.py
src/python_ai_agents/core/: __init__.py  agent.py  agents.py  audit.py  budget.py  checkpoint.py  context.py  deep.py  default_agent.py  episodic.py  eval.py  guardrail.py  guardrails.py  idempotency.py  learn.py  memory.py  model.py  observe.py  pricing.py  production.py  prompt.py  rag.py  replay.py  resilient.py  skill.py  streaming.py  structured.py  supervise.py  tokenizer.py  tool.py  trust.py  workspace.py
tests/: test_a2a_adapter.py  test_agents_tools.py  test_analytics.py  test_analytics_advanced.py  test_analytics_eval.py  test_analytics_ml.py  test_analytics_production.py  test_analytics_redrock_data.py  test_analytics_schema_builder.py  test_analytics_tracker.py  test_budget.py  test_charts.py  test_core.py  test_deep_learn.py  test_deepeval_adapter.py  test_default_agent.py  test_dsl_catalog.py  test_dsl_engine.py  test_dsl_grounding.py  test_dsl_nl.py  test_dsl_parser.py  test_dsl_toolset.py  test_episodic_replay.py  test_eval.py  test_guardrails.py  test_guardrails_ai_adapter.py  test_ingestion_connector.py  test_ingestion_refresh.py  test_ingestion_schema_freshness.py  test_ingestion_seam.py  test_ingestion_upsert.py  test_insights.py  test_langgraph_workflow.py  test_learn.py  test_lineage.py  test_live_e2e_integrations.py  test_mcp_adapter.py  test_memory.py  test_metrics.py  test_model_store.py  (+22 more)
tools/: model_scorecard.py
