[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "python-ai-agents"
version = "0.1.0"
description = "A thin orchestration, trust, and product-runtime layer for Python AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vaijanath Rao" }]
dependencies = [
  "anyio>=4.0",
  "pydantic>=2.7",
  "typing-extensions>=4.12; python_version < '3.11'",
]

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.2"]
pydantic-ai = ["pydantic-ai>=0.7"]
langgraph = ["langgraph>=0.6"]
litellm = ["litellm>=1.0"]
ollama = []
tools-jsonschema = ["jsonschema>=4.20"]
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
guardrails-ai = ["guardrails-ai>=0.5"]
deepeval = ["deepeval>=1.0"]
mcp = ["mcp>=1.0"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
llamaindex = ["llama-index>=0.10"]
analytics-demo = [
  # Pinned with upper bounds so fast-moving libraries (DuckDB, Streamlit) cannot
  # silently break SQL functions or APIs between deployments.
  "duckdb>=1.1,<2.0",
  "pandas>=2.0,<3.0",
  "plotly>=5.0,<6.0",
  "streamlit>=1.35,<2.0",
  "scikit-learn>=1.4,<2.0",
  "scipy>=1.11,<2.0",
  "statsmodels>=0.14,<0.15",
]
dev = [
  "jsonschema>=4.20",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_ai_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tools"]  # dev/benchmark scripts, not shipped code

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests guard optional-dependency imports behind pytest.importorskip(...),
# which necessarily runs before those imports.
"tests/**" = ["E402"]

[tool.pytest.ini_options]
markers = [
  "ollama: live Ollama integration tests",
  "integration: integration tests that may use local services or larger local fixtures",
  "redrock: analytics tests using local REDROCK CSV exports",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["python_ai_agents"]

[[tool.mypy.overrides]]
# Optional adapter dependencies that ship no type stubs.
module = [
    "guardrails.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "deepeval.*",
    "mcp.*",
    "jsonschema",
]
ignore_missing_imports = true
